feat: update config
